--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "firebase": "^8.9.0",
+    "firebase-admin": "^9.11.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
