--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.36",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "firebase": "^8.9.0",
