--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "export": "next export"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.36",
     "@material-ui/icons": "^4.11.2",
+    "antd": "^4.16.12",
     "axios": "^0.21.1",
     "firebase": "^8.9.0",
     "firebase-admin": "^9.11.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.19.2"
+    "react-hook-form": "^7.12.2",
+    "react-query": "^3.19.2",
+    "react-select": "^4.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
